src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABC_Country__c</fullName>
        <label>ABC Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Billing Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Newsagent</fullName>
                    <default>true</default>
                    <label>Newsagent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Unique_Ref__c</fullName>
        <description>Used to provide a basis for auto allocation to a Calling Bucket.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Unique Ref</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Commission__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>Commission rate agreed with Agency</description>
        <label>Commission</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Agency Contact)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Focus__c</fullName>
        <label>Agency Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                    <default>true</default>
                    <label>Media</label>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Group__c</fullName>
        <description>Does this Agency belong to an Agency Group?</description>
        <inlineHelpText>Shows whether thi Agency belong to an Agency Group</inlineHelpText>
        <label>Agency Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aegis</fullName>
                </value>
                <value>
                    <fullName>GroupM</fullName>
                </value>
                <value>
                    <fullName>Opera - Key Clients</fullName>
                </value>
                <value>
                    <fullName>Vivaki</fullName>
                </value>
                <value>
                    <fullName>Opera - General Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_of_Record_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact for AOR.</description>
        <label>Agency Contact (AOR)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Agency of Record Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_of_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advertiser&apos;s Primary Agency of Record.</description>
        <inlineHelpText>Advertiser&apos;s Primary Agency of Record.</inlineHelpText>
        <label>Agency of Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisers (Agency of Record)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <label>Agent Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agresso_Refence_Number__c</fullName>
        <description>Account&apos;s reference number in the Aggresso system</description>
        <inlineHelpText>Account&apos;s reference number in the Aggresso system</inlineHelpText>
        <label>Agresso Refence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <description>Account&apos;s annual spend on advertising with TMG</description>
        <inlineHelpText>Account&apos;s annual spend on advertising with TMG</inlineHelpText>
        <label>Annual Spend</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agency&apos;s contact for billing enquiries</description>
        <inlineHelpText>Agency&apos;s contact for billing enquiries</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Number__c</fullName>
        <label>Box Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <defaultValue>&quot;009&quot;</defaultValue>
        <label>Campaign Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Cancel</fullName>
                </value>
                <value>
                    <fullName>Hard Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancelled_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Details_Stored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines customer permission allowing us to reuse his card details for purchasing Day pass subscription.</description>
        <inlineHelpText>Defines customer permission allowing us to reuse his card details for purchasing Day pass subscription.</inlineHelpText>
        <label>Card Details Stored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary agency contact for designated account.</description>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Client Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <inlineHelpText>Company registration number</inlineHelpText>
        <label>Company Registration Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Account__c</fullName>
        <description>Field filled with previous Record Type of Account . If field is blank - Account was not converted.</description>
        <inlineHelpText>Field filled with previous Record Type of Account . If field is blank - Account was not converted.</inlineHelpText>
        <label>Converted From</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Cancellation_Date_Reached__c</fullName>
        <description>Count of Cancellation Date Reached = FALSE
AND
Subscription Status = Pending Cancellation</description>
        <label>Count Cancellation Date Reached</label>
        <summaryFilterItems>
            <field>Subscription__c.Cancellation_Date_Reached__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Pending Cancellation</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Pending_Cancel_Still_Active__c</fullName>
        <description>SLP-61: SB 23/02/10 - field to count the number of pending cancel subscriptions not at the cancel date yet (ie still active)</description>
        <label>Count Pending Cancel Still Active</label>
        <summaryFilterItems>
            <field>Subscription__c.Subscription_Status__c</field>
            <operation>equals</operation>
            <value>Pending Cancellation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Subscription__c.Current_Week_Position_Final__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Subscriber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Jira:PP-1294 Need to have the full country name, not the code.</description>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Price__c</fullName>
        <formula>11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cover Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creative_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Creative Agency)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creative_Code__c</fullName>
        <defaultValue>&quot;009&quot;</defaultValue>
        <label>Creative Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiry_Date__c</fullName>
        <label>Credit Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Insurace__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Credit insurance amount for this account</description>
        <inlineHelpText>Credit insurance amount for this account</inlineHelpText>
        <label>Credit Insurace</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <description>Represents the account&apos;s credit status in DTI</description>
        <inlineHelpText>Represents the account&apos;s credit status in DTI</inlineHelpText>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Product_Cal__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Digital_Subscriber&apos;, TEXT(Digital_Product_Type__c),Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority_del_del__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Double_Debit__c</fullName>
        <label>DD Double Debit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateofBirth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Low_Start_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Low Start Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Product_Type__c</fullName>
        <label>Digital Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Web pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Status__c</fullName>
        <formula>if( RecordType.Name =&apos;Registrant&apos;, 
    Replatform_Digital_Status__c , 
    Subscriber_Digital_Status__c 
  )</formula>
        <label>Digital Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doubleclick_Reference__c</fullName>
        <description>The Doubleclick reference number for the account.</description>
        <inlineHelpText>The Doubleclick reference number for the account.</inlineHelpText>
        <label>Doubleclick Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuplicateAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>identifies that the account is a duplicate</description>
        <label>DuplicateAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This account is marked as duplicate of the specified account</description>
        <inlineHelpText>This account is marked as duplicate of the specified account</inlineHelpText>
        <label>Duplicate Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Accounts</relationshipLabel>
        <relationshipName>DuplicateAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Subscription_Start_Calc__c</fullName>
        <formula>IF(MOD(Today() - DATE(1900, 1, 7), 7) = 1, Today() + 14, IF(MOD(Today() - DATE(1900, 1, 7), 7) = 2, Today() + 13, IF(MOD(Today() - DATE(1900, 1, 7), 7) = 3, Today() + 12, IF(MOD(Today() - DATE(1900, 1, 7), 7) = 4, Today() + 11, IF(MOD(Today() - DATE(1900, 1, 7), 7) = 5, Today() + 10, IF(MOD(Today() - DATE(1900, 1, 7), 7) = 6, Today() + 9, Today() + 15))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Subscription Start Calc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PP-1893 dianostics</description>
        <inlineHelpText>PP-1893 dianostics</inlineHelpText>
        <label>Email Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_to_be_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email to be Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entitlement_Identifier__c</fullName>
        <label>Entitlement Identifier</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORCE_UPDATE__c</fullName>
        <description>Temporary field to force retailers to update</description>
        <label>FORCE_UPDATE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Card_Balance__c</fullName>
        <description>Balance of the Flex card for the Trial offer.</description>
        <inlineHelpText>Balance of the Flex card for the Trial offer.</inlineHelpText>
        <label>Flex Card Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flex_Card_Number__c</fullName>
        <description>Card number for Flex trial offer.</description>
        <label>Flex Card Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Expiry_Date__c</fullName>
        <description>Flex card trial offer expiary date.</description>
        <label>Flex Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flex_Payment_Ref__c</fullName>
        <label>Flex Payment Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flex_Scheme_User__c</fullName>
        <label>Flex Scheme User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flex_Taken_Date__c</fullName>
        <description>Date Flex order was taken</description>
        <label>Flex Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_Entitlement_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, we force entitlements update no matter if any field that normally trigger such update was changed.</description>
        <inlineHelpText>If set to true, we force entitlements update no matter if any field that normally trigger such update was changed.</inlineHelpText>
        <label>Force Entitlement Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Donor of a Subscription Gift</description>
        <inlineHelpText>Donor of a Subscription Gift</inlineHelpText>
        <label>Gift Donor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Recipients</relationshipLabel>
        <relationshipName>Gift_Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Duration_1__c</fullName>
        <formula>VALUE(Pricing_Option__r.GracePeriodDuration1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Period Duration 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Duration_2__c</fullName>
        <formula>VALUE( Pricing_Option__r.Grace_Period_Duration_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Period Duration 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Duration_Total__c</fullName>
        <formula>Grace_Period_Duration_1__c +  Grace_Period_Duration_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Period Duration Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_End_Date__c</fullName>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Start_Date__c</fullName>
        <label>Grace Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Status__c</fullName>
        <label>Grace Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InGrace</fullName>
                </value>
                <value>
                    <fullName>NotInGrace</fullName>
                    <default>true</default>
                    <label>NotInGrace</label>
                </value>
                <value>
                    <fullName>GraceExpired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guid__c</fullName>
        <description>Unique identifier for this subscriber with the SAM system.</description>
        <externalId>true</externalId>
        <label>Guid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Delivery_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Delivery Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IF_NEW_ADDR1__c</fullName>
        <label>IF NEW ADDR1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_ADDR2__c</fullName>
        <label>IF NEW ADDR2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_ADDR3__c</fullName>
        <label>IF NEW ADDR3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_COUNTER_HOME__c</fullName>
        <label>IF NEW COUNTER HOME</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_DIRECT_MAIL_PERM__c</fullName>
        <label>IF NEW DIRECT MAIL PERM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_EMAIL_PERM_SUB__c</fullName>
        <label>IF NEW EMAIL PERM SUB</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_EMAIL_PERM_TDT__c</fullName>
        <label>IF NEW EMAIL PERM TDT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_EMAIL_PREM_THIRD__c</fullName>
        <label>IF NEW EMAIL PREM THIRD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_HOME_EMAIL_PERM__c</fullName>
        <label>IF NEW HOME EMAIL PERM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_HOME_PHONE__c</fullName>
        <label>IF NEW HOME PHONE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_INITIALS__c</fullName>
        <label>IF NEW INITIALS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_MAIL_ADDR__c</fullName>
        <label>IF NEW MAIL ADDR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_MOBILE_PHONE_PREF__c</fullName>
        <label>IF NEW MOBILE PHONE PREF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_MOBILE_PHONE__c</fullName>
        <label>IF NEW MOBILE PHONE</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_NEWSAGENT__c</fullName>
        <label>IF NEW NEWSAGENT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_PHONE_2_PERM__c</fullName>
        <label>IF NEW PHONE 2 PERM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_PHONE_2__c</fullName>
        <label>IF NEW PHONE 2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_POSTCODE__c</fullName>
        <label>IF NEW POSTCODE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_SURNAME__c</fullName>
        <label>IF NEW SURNAME</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_TITLE__c</fullName>
        <label>IF NEW TITLE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_NEW_TPS_FLAG__c</fullName>
        <label>IF NEW TPS FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_ADDR1__c</fullName>
        <label>IF OLD ADDR1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_ADDR2__c</fullName>
        <label>IF OLD ADDR2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_ADDR3__c</fullName>
        <label>IF OLD ADDR3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_COUNTER_HOME__c</fullName>
        <label>IF OLD COUNTER HOME</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_DIRECT_MAIL_PERMISSION__c</fullName>
        <label>IF OLD DIRECT MAIL PERMISSION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_EMAIL_ADDRESS__c</fullName>
        <label>IF OLD EMAIL ADDRESS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_EMAIL_PERM_SUB__c</fullName>
        <label>IF OLD EMAIL PERM SUB</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_EMAIL_PERM_TDT__c</fullName>
        <label>IF OLD EMAIL PERM TDT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_EMAIL_PERM_THIRD__c</fullName>
        <label>IF OLD EMAIL PERM THIRD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_HOME_EMAIL_PERM__c</fullName>
        <label>IF OLD HOME EMAIL PERM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_HOME_PHONE__c</fullName>
        <label>IF OLD HOME PHONE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_INITIALS__c</fullName>
        <label>IF OLD INITIALS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_MOBILE_NO__c</fullName>
        <label>IF OLD MOBILE NO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_NEWSAGENT__c</fullName>
        <label>IF OLD NEWSAGENT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_PHONE_2_PERM__c</fullName>
        <label>IF OLD PHONE 2 PERM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_PHONE_2__c</fullName>
        <label>IF OLD PHONE 2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_POSTCODE__c</fullName>
        <label>IF OLD POSTCODE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_SURNAME__c</fullName>
        <label>IF OLD SURNAME</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_TITLE__c</fullName>
        <label>IF OLD TITLE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_OLD_TPS_FLAG__c</fullName>
        <label>IF OLD TPS FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Old_TDT_Code__c</fullName>
        <label>IF Old TDT Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Retailer_Addr1__c</fullName>
        <description>Used to determine whether the retailer main address or the voucher address should be used for the new logic interface. Based on the shipping address postcode being present or not - other IF_Retailer fields do the same</description>
        <formula>IF( ShippingPostalCode=&quot;&quot;, BillingStreet, ShippingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Retailer_Addr1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Retailer_City__c</fullName>
        <formula>IF( ShippingPostalCode=&quot;&quot;,BillingCity ,ShippingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Retailer_City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Retailer_Country__c</fullName>
        <formula>IF( ShippingPostalCode=&quot;&quot;,BillingCountry ,ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Retailer_Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Retailer_Post_Code__c</fullName>
        <formula>IF( ShippingPostalCode=&quot;&quot;, BillingPostalCode, ShippingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Retailer_Post_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Retailer_State__c</fullName>
        <formula>IF( ShippingPostalCode=&quot;&quot;, BillingState,ShippingState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_Retailer_State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Bill_First_Addr__c</fullName>
        <formula>SUBSTITUTE( BillingStreet,BR(),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Bill_First_Addr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_WAC_Sub_Stop_Code__c</fullName>
        <description>Used in WAC outbound code. If subscripton has Active or In Renewal subscriptions then set to 0 to indicate active, if not set to 1</description>
        <formula>IF( Subscription_Status_calc__c &gt;0, &quot;0&quot;, &quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF_WAC_Sub_Stop_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_with_Artesian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ad sales use only - Artesian trial</description>
        <label>Include with Artesian</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>